# blog-snippets

./: .gitignore  README.org  elcast.el  mu4e-elfeed-config.el  pom.xml
2020-03-14-go-struct-interface/: Makefile  bench_test.go  go.mod
2022-07-16-zig-intro/: .gitignore  README.org  allocator.zig  call-c-string.zig  cimport.zig  field-align.c  json-parse.zig  linked-list.zig  pointer-convert.zig
2022-07-16-zig-intro/zig-as-c-lib/: Makefile  mathtest.h
2022-07-16-zig-intro/zig-import-c/: by-c.zig  by-header.zig  foo.c
2023-08-31-rust-ffi/: .gitignore  Cargo.toml  Makefile  README.org
2024-04-11-rust-error/: Cargo.toml  Makefile
2024-04-11-rust-error/my-lib/: Cargo.toml
2024-04-11-rust-error/src/: anyhow_demo.rs  main.rs  snafu_demo.rs  thiserror_demo.rs
2024-04-13-rust-error/: Cargo.toml  Makefile  README.org
2024-04-13-rust-error/my-lib/src/: lib.rs
2024-04-13-rust-error/snafu-lib/: Cargo.toml
2024-04-13-rust-error/snafu-lib/src/: lib.rs
2024-04-13-rust-error/src/: main.rs  snafu_client.rs  snafu_demo.rs  thiserror_client.rs  thiserror_demo.rs
2024-04-13-rust-error/thiserror-lib/: Cargo.toml
2024-04-13-rust-error/thiserror-lib/src/: lib.rs
cgo-jna-demo/: .gitignore  Makefile  README.org  libawesome.h  pom.xml
cloudflare/: cobalt.js  elpa.js  github-webhook.js
emacs-dynamic-module/: README.org
go/: README.org  go.sum
go-json-bench/: Makefile  go.mod  json_test.go  metric.go  metric_easyjson.go  metric_ffjson.go
go-module-tutorial/: go.mod  go.sum  main.go
go-struct-interface/: main.go
java/: pom.xml
mongodb-bench/: pom.xml
py-socket/: README.md
userscript/: README.org  emacs-china.org.js  fanyi.js  get-link-title.js  github-remove-unread.js  github.com.js  hackernews.js  infoq.cn.js  web-util.js
zig-as-c-lib/: test.c
(+55 files in other folders)
