[package]
name = "rust-errors"
version = "0.1.0"
authors = ["Jiacai Liu <dev@liujiaca.net>"]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
snafu = "0.8"
thiserror = "1"

[dependencies]
anyhow = { workspace = true }
snafu = { workspace = true }
thiserror = { workspace = true }
snafu_lib = { path = "snafu-lib" }
thiserror_lib = { path = "thiserror-lib" }

[workspace]
members = [
"snafu-lib",
"thiserror-lib",
]

[[bin]]
name = "snafu-client"
path = "src/snafu_client.rs"

[[bin]]
name = "thiserror-client"
path = "src/thiserror_client.rs"

[[bin]]
name = "anyhow"
path = "src/anyhow_demo.rs"

[[bin]]
name = "thiserror"
path = "src/thiserror_demo.rs"

[[bin]]
name = "snafu"
path = "src/snafu_demo.rs"